--- a/WebSystemManageTasks/appsettings.json
+++ b/WebSystemManageTasks/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "SecretKey": "This is secret key, secret key 123!@#$%^&*()_+",
+    "Audience": "audience",
+    "Issuer": "issuer",
+    "ExpiresHours": "12"
+  }
 }
