Добавлен класс ApplicationDbContext Добавлены конфигурации для сущностей

--- a/WebSystemManageTasks/appsettings.json
+++ b/WebSystemManageTasks/appsettings.json
@@ -11,5 +11,8 @@
     "Audience": "audience",
     "Issuer": "issuer",
     "ExpiresHours": "12"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=SystemTask;Pooling=true;"
   }
 }
